kubernetes/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
  - host: service-manager.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-manager-service
            port:
              number: 8080
